Implemented Dagger and Dao

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,27 +16,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '27.0.0'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     //region For Dagger
-    compile "com.google.dagger:dagger:2.13"
+    compile 'com.google.dagger:dagger:2.13'
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
-
     /*We are using the annotation processor provided by gradle for android.
-      Dagger-compiler is the annotation processing repo for generating the dependency
-      graph classes during build time.*/
+          Dagger-compiler is the annotation processing repo for generating the dependency
+          graph classes during build time.*/
     annotationProcessor "com.google.dagger:dagger-compiler:2.13"
     //endregion
-
     //region For GreenDao
     compile 'org.greenrobot:greendao:3.2.2'
-
     //For database encryption
     compile 'net.zetetic:android-database-sqlcipher:3.5.7'
     //endregion
